<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="_140">140</string>
    <string name="reply">Reply</string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="add_a_comment">Add a comment...</string>

</resources>