<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplyActivity">

    <EditText
        android:id="@+id/et_reply_tweet"
        android:hint="@string/add_a_comment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </EditText>

    <Button
        android:id="@+id/b_reply_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reply_tweet"
        android:text="@string/reply"
        android:background="@drawable/button_rounded_corners"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp"
        android:onClick="composeTweet" />

    <TextView
        android:id="@+id/et_reply_counter"
        android:text="@string/_140"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/et_reply_tweet">
    </TextView>

    <ProgressBar
        android:id="@+id/pbReplyLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true" />

</RelativeLayout>