<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvBody"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/tvUserName"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/time" />

    <Button
        android:id="@+id/reply_button"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvUserName"
        android:layout_marginTop="85dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/reply"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp" />
</RelativeLayout>